# matplotlib-colors

./: .gitignore  README.md  colormaps.py  colors.py  gen_readme.py  main.py  pyproject.toml  setup.py  test.py
matplotlib_colors/: README.md  __init__.py  colormaps.py  colors.py
matplotlib_colors/colors/: colormaps.py
scripts/: demo.py  gen_readme.py
src/: __init__.py  colormaps.py  colors.py
tests/: test.py
